tests/baselines/reference/covariance1.errors.txt
covariance1.ts(1,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== covariance1.ts (1 errors) ====
    module M {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
    
        interface X { m1:number; }
        export class XX implements X { constructor(public m1:number) { } }
    
        interface Y { x:X; }
    
        export function f(y:Y) { }
    
        var a:X;
        f({x:a}); // ok
    
        var b:XX;
        f({x:b}); // ok covariant subtype
    }
    
    